<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".konfigurasi_tampilan.yohan_update_pengguna">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:layout_marginBottom="592dp"
        android:src="@drawable/utmlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EditTextFullNameUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="text"
            android:autofillHints="name"/>
        <EditText
            android:id="@+id/EditTextUniversitasUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_universitas"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:autofillHints="name"/>
        <EditText
            android:id="@+id/EditTextNIMUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="NIM"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="number"
            android:autofillHints="nim"/>
        <EditText
            android:id="@+id/EditTextEmailUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"/>
        <EditText
            android:id="@+id/EditTextDobUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ttl"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:autofillHints="name"/>

        <EditText
            android:id="@+id/EditTextGenderUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/rounder_edit"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:autofillHints="name"/>
        <Button
            android:backgroundTint="#2196F3"
            android:id="@+id/buttonUpdateData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="update biodata mahasiswa" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>